Revoked API changes